Fix: added dark mode shadow and Tailwind classes for login screen (#41)
* Fix: added dark mode shadow and Tailwind classes for login screen

* -Update /light modes colors and margins for the login screen

-Removed section gradient
-Add a drop shadow variable
-Adjusted the login screens top margin

---------

--- a/tech-hire-elpaso/src/app/globals.css
+++ b/tech-hire-elpaso/src/app/globals.css
@@ -5,7 +5,7 @@
   --color-secondary: #rgba(245, 56, 56, 0.35);
   --color-primary-text: #4f5665;
   --color-heading-text: #08132a;
-  --red-drop-shadow: 0 0 35px rgba(255, 255, 255, 0.25);
+  --white-drop-shadow: 0 0 35px rgba(255, 255, 255, 0.25);
 }
 
 .max-screen-width {
